--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -1,21 +1,35 @@
-# 不适用集群
-org.quartz.scheduler.instanceName = DefaultQuartzScheduler
-org.quartz.scheduler.rmi.export = false
-org.quartz.scheduler.rmi.proxy = false
-org.quartz.scheduler.wrapJobExecutionInUserTransaction = false
-
-# 配置调度器的线程池
-org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
-org.quartz.threadPool.threadCount = 10
-org.quartz.threadPool.threadPriority = 5
-org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = true
-
+# Default Properties file for use by StdSchedulerFactory
+# to create a Quartz Scheduler Instance, if a different
+# properties file is not explicitly specified.
 #
-org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.tablePrefix = QRTZ_
-org.quartz.jobStore.dataSource = qzDS
-org.quartz.dataSource.qzDS.driver = oracle.jdbc.driver.OracleDriver
-org.quartz.dataSource.qzDS.URL = jdbc:oracle:thin:@localhost:1521:ora9i
-org.quartz.dataSource.qzDS.user = stamen
-org.quartz.dataSource.qzDS.password = abc
-org.quartz.dataSource.qzDS.maxConnections = 10
+#集群配置
+org.quartz.scheduler.instanceName=DefaultQuartzScheduler
+org.quartz.scheduler.rmi.export=false
+org.quartz.scheduler.rmi.proxy=false
+org.quartz.scheduler.wrapJobExecutionInUserTransaction=false
+org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+org.quartz.threadPool.threadCount=10
+org.quartz.threadPool.threadPriority=5
+org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
+org.quartz.jobStore.misfireThreshold=60000
+#============================================================================
+# Configure JobStore
+#============================================================================
+#默认配置，数据保存到内存
+#org.quartz.jobStore.class: org.quartz.simpl.RAMJobStore
+#持久化配置
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties=true
+#数据库表前缀
+org.quartz.jobStore.tablePrefix=qrtz_
+org.quartz.jobStore.dataSource=qzDS
+#============================================================================
+# Configure Datasources
+#============================================================================
+#JDBC驱动
+org.quartz.dataSource.qzDS.driver=com.mysql.jdbc.Driver
+org.quartz.dataSource.qzDS.URL=jdbc:mysql://localhost:3306/quartzite
+org.quartz.dataSource.qzDS.user=root
+org.quartz.dataSource.qzDS.password=qinaide
+org.quartz.dataSource.qzDS.maxConnection=10
