--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.2.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
@@ -31,7 +37,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.getsentry.raven</groupId>
+            <artifactId>raven-logback</artifactId>
+            <version>7.8.6</version>
 
+        </dependency>
     </dependencies>
     <build>
         <finalName>quartzite</finalName>
@@ -77,6 +88,7 @@
                     <include>**/*.json</include>
                     <include>**/*.sql</include>
                     <include>**/*.properties</include>
+                    <include>**/*.xml</include>
                 </includes>
             </resource>
             <resource>
