删除测试文件

--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -16,20 +16,20 @@ org.quartz.jobStore.misfireThreshold=60000
 # Configure JobStore
 #============================================================================
 #默认配置，数据保存到内存
-org.quartz.jobStore.class: org.quartz.simpl.RAMJobStore
-#持久化配置
-#org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
-#org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
-#org.quartz.jobStore.useProperties=true
-##数据库表前缀
-#org.quartz.jobStore.tablePrefix=qrtz_
-#org.quartz.jobStore.dataSource=qzDS
-##============================================================================
-## Configure Datasources
-##============================================================================
-##JDBC驱动
-#org.quartz.dataSource.qzDS.driver=com.mysql.jdbc.Driver
-#org.quartz.dataSource.qzDS.URL=jdbc:mysql://localhost:3306/quartzite
-#org.quartz.dataSource.qzDS.user=root
-#org.quartz.dataSource.qzDS.password=qinaide
-#org.quartz.dataSource.qzDS.maxConnection=10
+#org.quartz.jobStore.class: org.quartz.simpl.RAMJobStore
+持久化配置
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties=true
+#数据库表前缀
+org.quartz.jobStore.tablePrefix=qrtz_
+org.quartz.jobStore.dataSource=qzDS
+#============================================================================
+# Configure Datasources
+#============================================================================
+#JDBC驱动
+org.quartz.dataSource.qzDS.driver=com.mysql.jdbc.Driver
+org.quartz.dataSource.qzDS.URL=jdbc:mysql://localhost:3306/quartzite
+org.quartz.dataSource.qzDS.user=root
+org.quartz.dataSource.qzDS.password=root
+org.quartz.dataSource.qzDS.maxConnection=10
